# bolt

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: config.rs  lib.rs  main.rs  relay.rs
src/lib/: app.rs  config.rs  handlers.rs  lib.rs  utils.rs
src/lib/handlers/: index_handler.rs  nip11_handler.rs  websocket_handler.rs
templates/: index.html
