[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["timeout"] }
futures = { version = "0.3.31" }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yml = { version = "0.0.6" }
nostr = { version = "0.39.0", features = ["all-nips"] }
nostr-ndb = { version = "0.39.0" }
