[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[lib]
name = "bolt"
path = "src/lib/lib.rs"

[dependencies]
anyhow = { version = "1.0.95" }
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
headers = { version = "0.4.0" }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["timeout", "cors"] }
futures = { version = "0.3.31" }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
serde_yml = { version = "0.0.6" }
nostr = { version = "0.39.0", features = ["all-nips"] }
nostr-database = { version = "0.39.0" }
nostr-ndb = { version = "0.39.0" }
askama = { version = "0.12.1" }
